managed/customer1/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
