managed/customer1/4-ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
spec:
  basicAuth:
    secret: traefik-dashboard-auth
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: test-iota-cafe
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`test.is.iota.cafe`)
      kind: Rule
      # middlewares:
      #  - name: traefik-dashboard-basicauth
      #    namespace: default
      services:
        - name: test-nginx
          kind: Service
          port: 80
  tls:
    secretName: test-tls-crt-secret
